--- a/css/main.css
+++ b/css/main.css
@@ -40,25 +40,31 @@ header {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    margin: 0;
 }
 
 #character-nav ul li {
     height: 220px;
     margin: 10px 8px;
     /*top, botttom, left right*/
-    background-color: black;
+    background-color: #920c02;
     box-shadow: 0 155px 0 0 yellow inset;
     transition: box-shadow 0.2s ease-in-out;
 }
 
 #character-nav ul li:hover {
-    box-shadow: 0 220px 0 0 #920c02 inset;
+    box-shadow: 0 220px 0 0 yellow inset;
 }
 
 #character-nav ul li h2 {
     color: white;
-    font-size: 16px;
+    font-size: 18px;
     text-align: center;
+    transition: color 0.2s ease-in-out;
+}
+
+#character-nav ul li:hover h2 {
+    color: black;
 }
 
 #character-nav ul li a {
@@ -112,10 +118,11 @@ header {
 }
 
 footer {
-    padding: 20px 0;
+    padding: 10px 0;
+    height: auto;
+    font-size: 0.9em;
     text-align: center;
     background-color: rgb(40, 37, 37);
-    height: 80px;
     position: sticky;
     top: 100%;
 }
@@ -131,7 +138,7 @@ footer {
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, .85);
-    background-image: url(../images/Toothless_background.webp);
+    background-image: url(../images/Hiccup_background.webp);
     background-repeat: no-repeat;
     background-size: 55vh;
     background-position: 40px bottom;
@@ -139,18 +146,6 @@ footer {
     text-align: right;
 }
 
-/* we overwrite cap using specific ids */
-#lightbox2 {
-    background-image: url(../images/carol.jpeg);
-}
-
-#lightbox3 {
-    background-image: url(../images/clint.jpeg);
-}
-
-#lightbox5 {
-    background-image: url(../images/Thor_LB_Bg.png);
-}
 
 /* target allows us to show content based on the url
 e.g. #lightbox, #lightbox2, #lightbox3  */
