--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Georgia, 'Times New Roman', Times, serif;
     background-color: black;
     color: #fff;
     margin: 0;
